SwithT_BE_Fina/k8s/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: switht-msa-ingress
  namespace: tweety
  annotations:
    nginx.ingress.kubernetes.io/affinity: "cookie"  # 세션 스티키니스 활성화
    nginx.ingress.kubernetes.io/session-cookie-name: "tweety-session"  # 세션 쿠키 이름 #아래 김민성 수정 10-29
    nginx.ingress.kubernetes.io/session-cookie-hash: "sha1"  # 쿠키 해시 알고리즘
    nginx.ingress.kubernetes.io/affinity-mode: "persistent"
    nginx.ingress.kubernetes.io/session-cookie-max-age: "3600"         # HTTPS 리다이렉트 설정
    nginx.ingress.kubernetes.io/session-cookie-path: "/"
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /$1
    cert-manager.io/cluster-issuer: letsencrypt-prod

spec:
  tls:
    - hosts:
        - "server.switht.co.kr"
      secretName: switht-co.kr-tls
  rules:
    - host: server.switht.co.kr
      http:
        paths:
          - path: /member-service/(.*)
            pathType: Prefix
            backend:
              service:
                name: member-service
                port:
                  number: 80
          - path: /lecture-service/(.*)
            pathType: Prefix
            backend:
              service:
                name: lecture-service
                port:
                  number: 80
          - path: /payment-service/(.*)
            pathType: Prefix
            backend:
              service:
                name: payment-service
                port:
                  number: 80
